--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
 
 /* 초기화 */
 
@@ -13,12 +14,13 @@ body {
       background-color: #e9e9e9;
 }
 
+
 /* 헤더 */
 
 #main_header {
       width: 100%;
       height: 80px;
-      background-color: rgba(0,0,0,.55);
+      background-color: rgba(0,0,0,.60);
       color: #fff;
       position: fixed;
       z-index: 1;
@@ -79,4 +81,11 @@ body {
       text-align: center;
       left: 0;
       right: 0;
+}
+
+/* 스폰서 */
+#main_sponser {
+      width: 100%;
+      height: 100px;
+      background-color: #999;
 }
