--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,183 @@
 
 /* 컨텐츠 */
 
+/* 큰이미지 슬라이더 */
+
+#big_image_slider > .swiper-container {
+      width: 100%;
+      height: 750px;
+}
+#big_image_slider .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+}
+
+#big_image_slider .swiper-slide.slide1 {
+      background: url('../images/film_img01_.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#big_image_slider .swiper-slide.slide2 {
+      background: url('../images/film_img02_.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#big_image_slider .swiper-slide.slide3 {
+      background: url('../images/film_img03_.jpg');
+      background-size: cover;
+      background-position: center;
+}
+
+
+/* 이벤트 */
+
+#content_event {
+      margin: 30px;
+}
+
+#content_event > #event_text {
+      overflow: hidden;
+      margin-bottom: 20px;
+}
+#content_event > #event_text > h3 {
+      font-size: 25px;
+      float: left;
+      width: 100px;
+}
+#content_event > #event_text > p {
+      font-size: 16px;
+      font-weight: 600;
+      float: right;
+      width: 100px;
+      margin-top: 10px;
+}
+#content_event > #event_container {
+      margin-top: 30px;
+      /* overflow: hidden; */
+      margin-left: 10px;
+      margin-right: 10px;
+      /* width: 960px; */
+      /* margin: 0 auto; */
+      text-align: center;
+}
+#content_event > #event_container > div.event_item {
+      display: inline-block;
+      /* margin-right: 30px; */
+      font-weight: 600;
+      font-size: 20px;
+      text-align: center;
+}
+#content_event > #event_container > div.event_item:first-child {
+      width: 300px;
+      height: 160px;
+      background: url('../images/event_item_450_280.png') no-repeat;
+      background-size : contain;
+}
+#content_event > #event_container > div.event_item:nth-child(2), div.event_item:nth-child(3) {
+      width: 250px;
+      height: 160px;
+      background: url('../images/event_item_350_280.png') no-repeat;
+      background-size : contain;
+}
+
+#content_event > #event_container > img  {
+      /* float: left; */
+      /* display: block; */
+      height: 210px;
+      margin-right: 50px;
+      font-weight: 600;
+      font-size: 20px;
+}
+
+
+/* 작은 이미지 슬라이더 */
+
+#small_image_slider {
+      margin: 60px 30px;
+}
+#small_image_slider > h3 {
+      font-size: 23px;
+      margin-bottom: 30px;
+}
+#small_image_slider > .swiper-container {
+      height: 300px;
+}
+#small_image_slider .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+}
+
+#small_image_slider .swiper-slide.slide1 {
+      background: url('../images/film_img05.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#small_image_slider .swiper-slide.slide2 {
+      background: url('../images/film_img07.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#small_image_slider .swiper-slide.slide3 {
+      background: url('../images/film_img09.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#small_image_slider .swiper-slide.slide4 {
+      background: url('../images/film_img01.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#small_image_slider .swiper-slide.slide5 {
+      background: url('../images/film_img03.jpg');
+      background-size: cover;
+      background-position: center;
+}
+#small_image_slider .swiper-button-next {
+      background: url('../images/arrow-right-circle.svg');
+      background-repeat: no-repeat;
+      background-position-y: center;
+}
+#small_image_slider .swiper-button-prev {
+      background: url('../images/arrow-left-circle.svg');
+      background-repeat: no-repeat;
+      background-position-y: center;
+}
+#small_image_slider .swiper-button-next::after,
+#small_image_slider .swiper-button-prev::after {
+      display: none;
+}
+
+
 /* 이미지들 */
 #content_films {
       height: 700px;
