--- a/css/main.css
+++ b/css/main.css
@@ -69,16 +69,12 @@
 }
 #content_event > #event_container {
       margin-top: 30px;
-      /* overflow: hidden; */
       margin-left: 10px;
       margin-right: 10px;
-      /* width: 960px; */
-      /* margin: 0 auto; */
       text-align: center;
 }
 #content_event > #event_container > div.event_item {
       display: inline-block;
-      /* margin-right: 30px; */
       font-weight: 600;
       font-size: 20px;
       text-align: center;
@@ -86,19 +82,33 @@
 #content_event > #event_container > div.event_item:first-child {
       width: 300px;
       height: 160px;
-      background: url('../images/event_item_450_280.png') no-repeat;
+      background: url('../images/event_item01.png') no-repeat;
       background-size : contain;
 }
-#content_event > #event_container > div.event_item:nth-child(2), div.event_item:nth-child(3) {
+#content_event > #event_container > div.event_item:nth-child(2) {
       width: 250px;
       height: 160px;
-      background: url('../images/event_item_350_280.png') no-repeat;
+      background: url('../images/event_item02.png') no-repeat;
+      background-size : contain;
+      margin-right: 40px;
+}
+#content_event > #event_container > div.event_item:nth-child(3) {
+      width: 250px;
+      height: 160px;
+      background: url('../images/event_item02.png') no-repeat;
       background-size : contain;
 }
 
+#content_event > #event_container > div.event_item > p:first-child {
+      padding-top: 50px;
+      padding-bottom: 20px;
+}
+#content_event > #event_container > div.event_item > p:nth-child(2) {
+      font-size: 16px;
+      color: #666;
+}
+
 #content_event > #event_container > img  {
-      /* float: left; */
-      /* display: block; */
       height: 210px;
       margin-right: 50px;
       font-weight: 600;
@@ -181,13 +191,61 @@
 
 /* 이미지들 */
 #content_films {
+      width: 100%;
       height: 700px;
       background-color: #333;
+      color: white;
+      overflow: hidden;
 }
 
 #content_films > h3 {
       font-size: 30px;
       color: white;
+}
+
+#content_films div.film1 {
+      width: 50%;
+      float: left;
+}
+#content_films div.film2 {
+      width: 33.3%;
+      float: left;
+      padding: 0 13px;
+}
+#content_films div.film3 {
+      width: 33.3%;
+      padding: 0 13px;
+      float: left;
+}
+#content_films div.film4 {
+      width: 33.3%;
+      padding: 0 13px;
+      float: left;
+      clear: left;
+      margin-top: 25%;
+}
+#content_films div.film5 {
+      width: 33.3%;
+      padding: 0 13px;
+      float: left;
+      margin-top: -6%;
+}
+#content_films div.film6 {
+      width: 33.3%;
+      padding: 0 13px;
+      margin-top: 25%;
+      float: left;
+}
+#content_films .bg-img {
+      width: 100%;
+      border-radius: 15px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+}
+
+#content_films .film-caption {
+
 }
 
 
