--- a/css/common.css
+++ b/css/common.css
@@ -68,6 +68,9 @@ ul { list-style: none; }
 
 /* 푸터 */
 #main_footer {
+      position: absolute;
+      left: 0;
+      bottom: 0;
       width: 100%;
       height: 200px;
       background-color: #333;
@@ -104,5 +107,18 @@ ul { list-style: none; }
       }
       #main_header > .gnb_container > .trigger {
             display : block;
+      }
+
+      /* 푸터 */
+      #main_footer {
+            height: 180px;
+      }
+
+      #main_footer > .address {
+            font-size: 13px;
+      }
+
+      #main_footer > .info {
+            font-size: 12px;
       }
 }
