--- a/css/announce.css
+++ b/css/announce.css
@@ -85,6 +85,8 @@ a {
       border-bottom: 1px solid #444;
       padding: 10px;
       font-size: 18px;
+      line-height: 25px;
+
 }
 
 /* 컨텐츠 - 포스터 */
@@ -105,6 +107,7 @@ a {
       font-size: 18px;
       margin-top: 20px;
       padding: 10px;
+      line-height: 25px;
 }
 
 #content_poster > .poster_container > .poster_text > p:first-child {
@@ -174,6 +177,38 @@ a {
 } 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (min-width:768px) and (max-width:1023px) { 
+      #main_aside > ul > li > a {
+            font-size: 22px;
+      }
+
+      /* 컨텐츠 - 소개 */
+      #content_announce > h1 {
+            font-size: 25px;
+      }
+
+      #content_winner .winner.item > h5 {
+            font-size: 18px;
+      }
+
+      /* 컨텐츠 - 포스터 */
+      #content_poster > h1 {
+            font-size: 25px;
+      }
+
+      #content_poster > .poster_container > .poster_text {
+            font-size: 17px;
+            line-height: 20px;
+      }
+
+      /* 컨텐츠 - 심사위원&시상 */
+      #content_winner > h1 {
+            font-size: 25px;
+      }
+
+      /* 컨텐츠 - 파트너 */
+      #content_partner > h1 {
+            font-size: 25px;
+      }
 }
 
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
@@ -231,6 +266,7 @@ a {
 
       #content_poster > .poster_container > .poster_text {
             font-size: 16px;
+            line-height: 20px;
       }
 
 
