--- a/css/common.css
+++ b/css/common.css
@@ -66,6 +66,33 @@ ul { list-style: none; }
       display: none;
 }
 
+/* 모바일 메뉴 */
+#mobile_menu {
+      background: #333;
+      color: white;
+      height: 100vw;
+      width: 100vw;
+      overflow: hidden;
+      position: fixed;
+      top: 80px;
+      display: none;
+}
+
+#mobile_menu > .gnb {
+      padding-top: 40px;
+}
+
+#mobile_menu > .gnb > ul > li {
+      width: 100%;
+      padding: 20px;
+}
+
+#mobile_menu > .gnb > ul > li > a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 18px;
+}
+
 /* 푸터 */
 #main_footer {
       width: 100%;
@@ -95,6 +122,17 @@ ul { list-style: none; }
       width: 100%;
       height: 100px;
       background-color: #999;
+}
+
+
+
+/* 미디어 쿼리 */
+/* PC (해상도 1024px)*/ 
+@media all and (min-width:1024px) {
+      
+} 
+/* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
+@media all and (min-width:768px) and (max-width:1023px) { 
 }
 
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
