--- a/css/announce.css
+++ b/css/announce.css
@@ -22,7 +22,7 @@ a {
       float: left;
       width: 1px;
       height: 100%;
-      background-color: #ccc;
+      background-color: #444;
 }
  
 #main_aside {
@@ -174,7 +174,21 @@ a {
 /* PC (해상도 1024px)*/ 
 @media all and (min-width:1024px) {
       
+      #content_poster > .poster_container {
+           text-align: left;
+      }
+
+      #content_poster > .poster_container > .poster_text {
+            display: inline-block;
+            width: 600px;
+            margin-left: 20px;
+      }
+
+      #content_poster > .poster_container > .poster_img {
+            display: inline-block;
+      }
 } 
+
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (min-width:768px) and (max-width:1023px) { 
       #main_aside > ul > li > a {
@@ -262,6 +276,10 @@ a {
 
       #content_poster > h1 {
             font-size: 23px;
+      }
+
+      #content_poster > .poster_container > .poster_img {
+            text-align: center;
       }
 
       #content_poster > .poster_container > .poster_text {
